# ChangeLog for x11-libs/guile-gtk
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/ChangeLog,v 1.45 2013/05/04 12:03:19 jlec Exp $

*guile-gtk-2.1-r2 (04 May 2013)

  04 May 2013; Justin Lecher <jlec@gentoo.org> +guile-gtk-2.1-r2.ebuild:
  Moved to autotools-utils.eclass, fixed old macros for automake-1.13, #468562

  13 Feb 2013; Pacho Ramos <pacho@gentoo.org>
  -files/guile-gtk-0.19-Makefile.in.patch, -guile-gtk-1.2.0.31.ebuild,
  -guile-gtk-1.2.0.41.ebuild, -guile-gtk-1.2.0.60.ebuild:
  Drop old

  31 Jan 2013; Agostino Sarubbo <ago@gentoo.org> guile-gtk-2.1-r1.ebuild:
  Stable for ppc, wrt bug #422323

  30 Jan 2013; Agostino Sarubbo <ago@gentoo.org> guile-gtk-2.1-r1.ebuild:
  Stable for x86, wrt bug #422323

  30 Jan 2013; Agostino Sarubbo <ago@gentoo.org> guile-gtk-2.1-r1.ebuild:
  Stable for amd64, wrt bug #422323

  23 Mar 2011; Gilles Dartiguelongue <eva@gentoo.org> guile-gtk-2.1.ebuild,
  guile-gtk-2.1-r1.ebuild:
  Fix slot-deps on gnome libs.

  18 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -guile-gtk-2.0.ebuild,
  guile-gtk-2.1-r1.ebuild:
  QA: Move latest to eapi4 to avoid ugly pkg_setup hack. Remove eapi0 version
  so virtualx eclass can require eapi2 unconditionally.

*guile-gtk-2.1-r1 (24 Sep 2010)

  24 Sep 2010; Justin Lecher <jlec@gentoo.org> +guile-gtk-2.1-r1.ebuild:
  Keyworded for ~-linux

  16 Jul 2010; Christian Faulhammer <fauli@gentoo.org> guile-gtk-2.1.ebuild:
  stable x86, bug 326019

  16 Jul 2010; Justin Lecher <jlec@gentoo.org> files/2.1-brokentest.patch:
  Fix for brokentest fix

  28 Jun 2010; Justin Lecher <jlec@gentoo.org> +files/2.1-brokentest.patch,
  guile-gtk-2.1.ebuild, +files/2.1-prll-install.patch:
  Fix prll installation, 298803 and removed broken test, #298802

  28 Jun 2010; Christoph Mende <angelos@gentoo.org> guile-gtk-2.1.ebuild:
  Stable on amd64 wrt bug #326019

  28 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>