@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX 2.1-brokentest.patch 1029 SHA256 6aa51463c7f0f966c8a7668877fc1199b6ed85187be21811ca3c84ca42c029c1 SHA512 e398ba38b19a2076a0974da3b8c2a038fe7b49e59cf187e20eb33df1bc74f6d34afcec5ffac5b288ed59b0f131a2a30254e248b6c63ff10cbf9107005ca56625 WHIRLPOOL 8cc58c4482cd44cbcaa83c4003f6eab286d6fb8a48e96510fba60cbbdf16afc4b52aca0ba330b73c10fd1be703b448f17457e2b6574ff80a4e4c83e070b0dd31
 AUX 2.1-prll-install.patch 421 SHA256 9f2aa837ee4cae17e703e4367179e64e69c0759f601ad3acd74431222e420b0d SHA512 ff30ed5edb3a9a2bfde6b480b2bbf2d8487cfe6583f73bbefb35e434b37e727037005e6e11e91aa115fcc75ed558883e36aa64d46f34d9ab40a94792eb201e10 WHIRLPOOL bb12b45f907f87c6d030a5562053d116191c9f8a50b37b85fb8b83d85a84a27891b9fc2db28de27c4ac296639051e8ea9b8cb5dd9f235d3c998cd1b983fd546b
@@ -7,13 +7,24 @@ AUX guile-gtk-2.0-g-object-ref.diff 1239 SHA256 fb68d90e21c8d7fb2b73c55a068b5528
 DIST guile-gtk-2.1.tar.gz 781985 SHA256 9ad30cdfcae688837785774b2149f0ec82f464412017aeeb045b4336ef2416cc SHA512 ab9bc66c97099d6958c401e16db57ceedaf23f1944cb7cf1e6899547c77cafff67455f228edd156a5a7ee0b62264e6af0ff82fa3ec31bcb499710bc5cb2070a7 WHIRLPOOL 6e14158951fa307fedc20f8956ecb1eefc7e1b2c3f5d0b3505060ceb709efd51a40e5931c4e05877b7ce35498ebe1fa06526859efc00b09e9c46bb7b8661a4c5
 EBUILD guile-gtk-2.1-r1.ebuild 986 SHA256 a8c6ccda0d01d24e4f8b0cf54ac38733ea34bbf1aa437b42b40116061de5dead SHA512 72867306815dca709dae3312cedbe53af56d5d558b06f166e120c6434d2b3ac1ab79f91cd61ad86f796eefeb5ebdcebc3073ede00be968a5ff52462bd714ac3b WHIRLPOOL 10cc163ea7c8558a1ddd9b5bfed79355940a454cb1f112d7edc9d61be361d918419b446b8273f78a81996bd14194244b5a03748f627ce4344315d506cf82ea50
 EBUILD guile-gtk-2.1-r2.ebuild 1061 SHA256 9552ff63ba22c02390e7aadc21978b54dd6242569f4e556c146eaf1f00597ed1 SHA512 aafd2ff5fe7884b3d6f403a4f65d1a177f3ec27f619494d9b69fd04c4e5ea3502b99ec7aad4f2a71d31740cb5b3c923f1ae54bee3705bc5948812656eb90115f WHIRLPOOL fbf1f32248b955cff4c0f6d57f08200249e0a4f02a73ad02a9c3110191e2cfae157af0d929e7c79ba31713af4bf9a481b9c61927b66b0e2c19a4d71f743b8cf0
-EBUILD guile-gtk-2.1.ebuild 1201 SHA256 f9e287e95ceb9d6764a118cb80c9b0c1bdd8fff775d25e5367df829fea0abb16 SHA512 8ab2496456feb001802e59caca341c466d5811cda9145a0063f171f541917ca8ca32933e92127ccdf56278cb81b421a584bf74af396fce0b0c040a7b3f812e17 WHIRLPOOL 847ced6c6c2e4df2ad9c309ddf5f37ebd8879fa08571cc4a007862bed7456e38248ffdb82eff51aefe48f41fec94834fd359f2f18ea559151ba256929e204f8a
-MISC ChangeLog 5964 SHA256 d6d5b3b587461f98e4d99109354cfb526ff72595017aa18ec2ec258b5a381846 SHA512 11b6b2faf8f14ab1168e46d14d93af8138cfd1fafc3c9b10adbfded20017d026b547b4f769b4466f635a7afde8d5c9326edfb69d7a88378f58be4f3cdf602b2f WHIRLPOOL a51617edf22e762b7af0009f84758720cb0ad69fcfdbb8c45b7210cedc42feddb46d8fd521f7c18da65e43634c2bc00d9bdfbd942bac1acd69813901051444b9
+MISC ChangeLog 6059 SHA256 e30ffab7c9a0c9b9d3582d58c1ff1e6fc0666ee622050c61e8bcfbdc1566af24 SHA512 486cd6388fd2f5d1c01b46c3e694038de650737426df124d5d6af04f3684b93d16d9fc1d567e525fbb50e302e34057c7124d52aea23f9a35191d56ce799eefbd WHIRLPOOL 3c684a8fcb1d36685e757540df39ca6923c8ee48d421435dc9d2396a743d981fcb4cd8b06c3ce7d5e8f6980c4e045ab4cd97ac4d6a9f315ee68f0f52b8ecfa59
 MISC metadata.xml 383 SHA256 703a18a1572fa929ca3f575b294703022e2f771d3fff0b22e895cd452076feaa SHA512 d6ffac6b5e70b633e56ca9bf9d4162c065093991e26747790bfea6c4d3b9bc472eb2ac283fd8a16d4cea131f15561e37e2ef0340f15aa38e05d6ae6350a17350 WHIRLPOOL 2ca6a2d91eac12815bf8255fda73d20c2dd5ff522be915b5a281ea4bb0f225950898bf4303c47c3580d72b3d009e700a7156291c7648eca21baa849689ab84be
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iEYEAREKAAYFAlGE+Q4ACgkQgAnW8HDreRasNwCeOjaOwad1Z1fM4he8m+yJUhE3
-kf4AoMBGeHY8gN49FMN/SwnvBTbqmNK8
-=vsd5
+iQJ8BAEBCABmBQJT4hsgXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQxMzgwNDhGMjg4MzhERTE1NTY2NjA4MkZE
+MUJBQjZCNTI4REIwMjlDAAoJENG6trUo2wKcNxQP/iuveZfN2elTQpaPcPDBY2ze
+tzHzI8qe+ghM2baH1BR1Rt/DYuEhlHaG9KAOgqq9DSEl5fdRwIwn3j6t6B0PpSbU
+L1zvntP/xSnSi372dEAbsAzxHvdW33276CgntW1qlU4gH2qzB22s7iFxRFc/Cipq
+8/3swnN1UAyDUVzmnjgLCDRooYQwD5cE9/Gw272JmRIHLJCRdfiLoQT5zlP7/Urz
+CeKgw9wLpjWaBkUwdVgXhkisN62SkZNdsHIP/w1Exp70V8jA7z8voygftwhs3S5i
+4+0cgp4PnILWIHuOKaCG9JT+sRK520mNUo5p+qhgtiVimcZ/aleMJpGE2fRpABID
+DHJsCvUdvaHosVm7expvajYdTM6koBmUHvn1e3j9CU8zta3rvuhxy62v88wgjRh+
+roTdwNKvAEh+hJfVoAhBGHievW4KZFg622/Jo9irRiDtbTEsHBvUQ4TLVeyrMViE
+Okt9aSfKR6+IKHgEmm8hIGx29PNjgQPSnQg7Nl/CHuaHBSC08796/Vn3D+NMOlXX
+c8Nzl/bm+g8JdampYCEtGZxGWMfnc5VwUIOZyWKWx+vVyg1xjwKuKTRS/n+fsJgD
+q6pjT1OP/x2lKH+MahKagMZik6Lj+W0y1+iZcGBMgi1BRxJjpJ4nHK153dvPUTF4
+Zb/Wwl9+kTGPMpdomD0j
+=eddP
 -----END PGP SIGNATURE-----
